--- a/app/src/main/res/layout/item_fenlei_fliters.xml
+++ b/app/src/main/res/layout/item_fenlei_fliters.xml
@@ -12,6 +12,7 @@
         android:layout_marginVertical="3dp"
         android:textSize="16sp"
         android:gravity="center"
+        android:textColor="@color/color_CC000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
