--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,4 +30,5 @@
     <color name="color_96a2d7">#96A2D7</color>
     <color name="color_2C44B1">#2C44B1</color>
     <color name="color_2B5CE8">#2B5CE8</color>
+    <color name="color_9F9494">#80D3C5C5</color>
 </resources>
