--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,4 +31,7 @@
     <color name="color_2C44B1">#2C44B1</color>
     <color name="color_2B5CE8">#2B5CE8</color>
     <color name="color_9F9494">#80D3C5C5</color>
+    <color name="color_ff5c00">#ff5c00</color>
+    <color name="color_whiter">#ffffff</color>
+    <color name="exo_edit_mode_background_color">#FFF4F3F0</color>
 </resources>
